[fix] Caroussel caption display and navbar collapse

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,17 +1,14 @@
-body { padding-top: 70px; }
+body { padding-top: 50px; }
 
 /* Navbar color */
 .navbar-default {
     border-color: transparent;
     background-color: #dadada;
     }
-    
-    
     .navbar-toggle {
     border-color: transparent;
     border: 0px solid transparent;
     }
-    
     .navbar-default .navbar-nav > li > a:hover,
     .navbar-default .navbar-nav > li > a:focus {
         background-color: #16a085;
@@ -37,9 +34,11 @@ body { padding-top: 70px; }
         top: 0;
         border-width: 0 0 1px;
     }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
     .navbar-nav {
         float: none!important;
-        margin-top: 7.5px;
     }
     .navbar-nav>li {
         float: none;
@@ -51,4 +50,74 @@ body { padding-top: 70px; }
     .collapse.in{
         display:block !important;
     }
-  }
+   .navbar-nav .open .dropdown-menu {
+       position: static;
+       float: none;
+       width: auto;
+       margin-top: 0;
+       background-color: transparent;
+       border: 0;
+       -webkit-box-shadow: none;
+       box-shadow: none;
+    }
+}
+@media handheld {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+   .navbar-nav .open .dropdown-menu {
+       position: static;
+       float: none;
+       width: auto;
+       margin-top: 0;
+       background-color: transparent;
+       border: 0;
+       -webkit-box-shadow: none;
+       box-shadow: none;
+    }
+}
+
+  
+
+#carousel-example-generic {
+    min-height: 200px;
+}
+.caroussel-inner {
+    min-height: 200px;    
+}
+.item {
+    min-height: 200px;
+}
+.img-responsive {
+    min-height: 200px;
+}
